@@ -1,19 +1,11 @@
 package SPVM::Float {
-  has value : private float;
+  has val : ro float;
   
   sub new : SPVM::Float ($value : float) {
     my $self = new SPVM::Float;
     
-    $self->{value} = $value;
+    $self->{val} = $value;
     
     return $self;
-  }
-  
-  sub val : float ($self : self) {
-    return $self->{value};
-  }
-  
-  sub set_val : void ($self : self, $value : float) {
-    $self->{value} = $value;
   }
 }
