@@ -1,19 +1,11 @@
 package SPVM::Long {
-  has value : private long;
+  has val : ro long;
   
   sub new : SPVM::Long ($value : long) {
     my $self = new SPVM::Long;
     
-    $self->{value} = $value;
+    $self->{val} = $value;
     
     return $self;
-  }
-  
-  sub val : long ($self : self) {
-    return $self->{value};
-  }
-
-  sub set_val : void ($self : self, $value : long) {
-    $self->{value} = $value;
   }
 }
