@@ -1,17 +1,12 @@
 package TestCase::Float {
-  use SPVM::Float;
-
   sub basic : int () {
-    my $oval = SPVM::Float->new(0.25f);
+    my $oval = SPVM::Float->new(FLT_MIN());
     my $value1 = $oval->val;
-
-    $oval->set_val(0.5f);
-    my $value2 = $oval->val;
     
-    if ($value1 == 0.25 && $value2 == 0.5) {
-      return 1;
+    unless ($value1 == FLT_MIN()) {
+      return 0;
     }
     
-    return 0;
+    return 1;
   }
 }
