@@ -1,17 +1,12 @@
 package TestCase::Int {
-  use SPVM::Int;
-
   sub basic : int () {
-    my $oval = SPVM::Int->new(3);
+    my $oval = SPVM::Int->new(INT32_MIN());
     my $value1 = $oval->val;
     
-    $oval->set_val(5);
-    my $value2 = $oval->val;
-    
-    if ($value1 == 3 && $value2 == 5) {
-      return 1;
+    unless ($value1 == INT32_MIN()) {
+      return 0;
     }
     
-    return 0;
+    return 1;
   }
 }
